// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer should render Default 1`] = `
<DocumentFragment>
  <footer
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Gesellschaft
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Politik
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Kultur
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Tsüri-News
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://google.com"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Was lauft?
          </span>
        </a>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Guides
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Agenda
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="https://google.com"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Denkmal.org
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Tsüri Guide
              </span>
            </a>
          </div>
        </div>
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Fokusthema
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Mobilität
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Bildung
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Konsum
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Archive
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          class="emotion-46 emotion-47"
        />
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Über Uns
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/team/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Team
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/about-us/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Über Uns
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Kontakt
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Jobs
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should render WithClassName 1`] = `
<DocumentFragment>
  <footer
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Gesellschaft
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Politik
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Kultur
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Tsüri-News
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://google.com"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Was lauft?
          </span>
        </a>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Guides
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Agenda
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="https://google.com"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Denkmal.org
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Tsüri Guide
              </span>
            </a>
          </div>
        </div>
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Fokusthema
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Mobilität
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Bildung
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Konsum
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Archive
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          class="emotion-46 emotion-47"
        />
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Über Uns
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/team/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Team
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/about-us/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Über Uns
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Kontakt
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Jobs
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should render WithEmotion 1`] = `
<DocumentFragment>
  <footer
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Gesellschaft
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Politik
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Kultur
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="/a/abcd"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Tsüri-News
          </span>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://google.com"
        >
          <span
            class="MuiTypography-root MuiTypography-h4 emotion-7"
          >
            Was lauft?
          </span>
        </a>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Guides
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Agenda
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="https://google.com"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Denkmal.org
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Tsüri Guide
              </span>
            </a>
          </div>
        </div>
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Fokusthema
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Mobilität
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Bildung
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Konsum
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/a/abcd"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Archive
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          class="emotion-46 emotion-47"
        />
        <div
          class="emotion-18 emotion-19"
        >
          <span
            class="emotion-20 emotion-21"
          >
            Über Uns
          </span>
          <div
            class="emotion-22 emotion-23"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/team/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Team
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
              href="/about-us/"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Über Uns
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Kontakt
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-24"
            >
              <span
                class="MuiTypography-root MuiTypography-h6 emotion-25"
              >
                Jobs
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should render WithError 1`] = `
<DocumentFragment>
  <footer
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      />
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-8 emotion-9"
        />
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should render WithLoading 1`] = `
<DocumentFragment>
  <footer
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      />
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-8 emotion-9"
        />
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should render WithoutItems 1`] = `
<DocumentFragment>
  <footer
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    />
  </footer>
</DocumentFragment>
`;
